@@ -1,3 +1,7 @@
+- 2017-03-13:
+
+  - Add support to set the nº of columns
+
 - 2015-03-09:
 
   - Fix unit test fail with Django 1.7 @nikolas
@@ -15,7 +19,7 @@
 - 2013-8-27:
 
   Add support for Bootstrap 3
-  
+
   contributed by `Nivl <https://github.com/Nivl>`_
 
 
